Fix overall layout issues

--- a/project/source/stylesheets/site.css.scss
+++ b/project/source/stylesheets/site.css.scss
@@ -15,6 +15,10 @@ hr {
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
+.row.mb-5 {
+  // This is necessary to fix height & spacing in Safari
+  height: intrinsic;
+}
 .image-container {
   position: relative;
 }
@@ -137,12 +141,16 @@ ul.section-list li {
 .exhibition-details {
   border-top: 1px solid #ddd;
   padding: 12px;
+  line-height: 1.1;
   margin-left: 36px;
   width: 100%;
 }
 .exhibition-title {
   font-size: 20px;
   margin-bottom: 12px;
+}
+.exhibition-description {
+  line-height: 1.3;
 }
 .icon-list {
   display: flex;
